--- a/Team_Cucumber/frontend/src/index.css
+++ b/Team_Cucumber/frontend/src/index.css
@@ -1,5 +1,6 @@
 @tailwindcss / preflight;
 @tailwind utilities;
+@import "tailwindcss";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -7,7 +8,21 @@
   font-weight: 400;
 }
 
+/* 높이 100% 적용하기 위한 코드 */
+html {
+  height: 100%;
+}
+
 body {
   max-width: 768px;
   margin: auto;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+main {
+  height: 100%;
 }
